test fix for mobile view shift

--- a/main.css
+++ b/main.css
@@ -172,6 +172,14 @@ a {
 
 
 @media only screen and (max-width: 450px) {
+    /*test for mobile phone shifting*/
+    #maincon {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100%;
+    }
     .main {
         justify-content: center;
         align-items: center;
